display person properties in columns